--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="container container-center">
         <h1>Interests</h1>
         <p>
-          I'm interested in web development, business and entertainment 
+          I'm interested in Gaming, business and entertainment 
         </p>
       </div>
     </section>
@@ -64,14 +64,14 @@
       <div class="footer-header">social media presence</div>
       <ul class="social-links list-non-bullet">
         <li class="list-item-inline">
-          <a class="link" href="https://instagram.com/"> instagram </a>
+          <a class="link" href="https://www.instagram.com/__mohitsingh.__"> instagram </a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="/"> others </a>
+          <a class="link" href="https://www.facebook.com/profile.php?id=100024916262668"> Facebook </a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="/">
-            Others
+          <a class="link" href="https://www.snapchat.com/add/a.mohitsingh?share_id=Yf63iDR2O-Y&locale=en-GB">
+            Snapchat
           </a>
         </li>
       </ul>
